<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/detail"
        tools:text="Firebase User ID: 123456789abc"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signed_out" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="92dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/hint_verification_code"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button
                    android:id="@+id/button_start_verification"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth" />

                <Button
                    android:id="@+id/button_verify_phone"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth" />

                <Button
                    android:id="@+id/button_resend"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth" />
            </LinearLayout>

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:id="@+id/signed_in_buttons"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:orientation="horizontal"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:paddingRight="16dp"-->
        <!--android:visibility="gone"-->
        <!--android:weightSum="1.0">-->

        <!--<Button-->
        <!--android:id="@+id/sign_out_button"-->
        <!--style="@style/Widget.AppCompat.Button.Colored"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1.0"-->
        <!--android:text="@string/sign_out" />-->

        <!--</LinearLayout>-->

    </RelativeLayout>

</LinearLayout>
